--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -588,4 +588,80 @@ url={http://csrc.nist.gov/nissc/1997}
 	pages={239--252},
 	year={1989},
 	organization={Springer}
-	    }
+}
+
+@InProceedings{Shor1994, 
+    title={Algorithms for quantum computation: discrete logarithms and factoring},
+    author={P. W. {Shor}},
+    booktitle ={Proceedings 35th Annual Symposium on Foundations of Computer Science},
+    year ={1994}, 
+    pages ={124--134}
+}
+
+@InProceedings{Ajtai1998,
+    title = {The shortest vector problem in L2 is NP-hard for randomized reductions},
+    author = {Ajtai, Mikl\'{o}s},
+    booktitle={STOC},
+    year = {1998},
+    pages = {10--19}
+}
+
+@InProceedings{Goldreich1998,
+    title = {On the limits of nonapproximability of lattice problems},
+    author = {Goldreich, Oded and Goldwasser, Shafi},
+    booktitle={STOC},
+    year = {1998},
+    pages = {1--9}
+}
+
+@InProceedings{Ajtai1996,
+    title = {Generating hard instances of lattice problems},
+    author = {Ajtai, Mikl\'{o}s},
+    booktitle={STOC},
+    year = {1996},
+    pages = {99--108}
+}
+@article{Lenstra1982,
+    author = {K. Lenstra, Arjen and W. Lenstra, H and Lovász, László},
+    year = {1982},
+    month = {12},
+    pages = {},
+    title = {Factoring Polynomials with Rational Coefficients},
+    volume = {261},
+    journal = {Mathematische Annalen},
+}
+
+@article{Schnorr1987,
+    author = {Schnorr, C.P.},
+    title = {A Hierarchy of Polynomial Time Lattice Basis Reduction Algorithms},
+    journal = {Theor. Comput. Sci.},
+    year = {1987},
+    pages = {201--224}
+} 
+
+@InProceedings{Regev2005,
+    title = {On lattices, learning with errors, random linear codes, and cryptography},
+    author = {Regev, Oded},
+    booktitle={STOC},
+    year = {2005},
+    pages = {84--93}
+}
+
+@InProceedings{Peikert2009,
+    title = {Public-key cryptosystems from the worst-case shortest vector problem: extended abstract},
+    author = {Peikert, Chris},
+    booktitle={STOC},
+    year = {2009},
+    pages = {333--342}
+}
+
+@InProceedings{Lyubashevsky2010,
+    author={Lyubashevsky, Vadim
+    and Peikert, Chris
+    and Regev, Oded},
+    title={On Ideal Lattices and Learning with Errors over Rings},
+    booktitle="EUROCRYPT",
+    year={2010},
+    pages={1--23}
+}
+
