--- a/notes/authenc.tex
+++ b/notes/authenc.tex
@@ -2,6 +2,147 @@
 \section{Authenticated Encryption}
 \label{sec:authenc}
 
+\tnote{We'll possibly introduce the following at some point, but didn't need it
+here yet.}
+We sometimes use $\bigO$ notation to hide small values that can be derived from
+proofs, but don't matter to the interpretation of the theorem. If we were to do
+an asymptotic treatment, this would correspond to hiding constants, hence the
+abuse of notation.  Thus in above theorem we would replace $q+3$ with
+$\bigO(q)$. \\
+
+
+\fpage{.20}{
+\underline{$\advB^{\Enc}$}\\[1pt]
+$b \getsr \bits$\\
+$b' \getsr \advA^\EncSim$\\
+If $(b = b')$ then Ret 1\\
+Ret 0\medskip
+
+\underline{$\EncSim(M_0,M_1)$}\\
+Return $\Enc(M_b)$
+}
+
+\begin{align*}
+\AdvROR{\SE}{\advB} 
+    &= \left|\Prob{\ROR1_\SE^\advB\Rightarrow 1} -
+                                \Prob{\ROR0_\SE^\advB\Rightarrow 1}\right|\\
+    &= \left|\Prob{\INDCPA_\SE^\advA\Rightarrow\true} - \frac{1}{2}\right|\\
+    &= \left|\frac{1}{2} +
+    \frac{1}{2}\cdot\AdvINDCPA{\SE}{\advA} - \frac{1}{2}\right|\\
+    &= \frac{1}{2}\cdot\AdvINDCPA{\SE}{\advA}
+\end{align*}
+
+
+
+\subsection{Active attacks on unauthenticated encryption schemes.}
+We left off in the previous chapter understanding how to build chosen plaintext attack (CPA) secure encryption for randomized encryption schemes (i.e., schemes with key generation and an encryption algorithm that take a secret and make a random nonce or IV for every message to which the scheme is applied). In particular, we saw this with real or random (ROR) CPA games:
+
+\begin{theorem}
+Let $\SE$ be a symmetric encryption scheme. Let $\advA$ be any
+$\INDCPA_\SE$-adversary making at most $q$ queries. 
+We give an $\ROR_\SE$-adversary $\advB$ such that
+\bnm
+  \AdvINDCPA{\SE}{\advA} \le 2\cdotsm\AdvROR{\SE}{\advB}
+\enm
+Adversary $\advB$ makes at most $q$ 
+queries and runs in time that of $\advA$.
+\label{theorem:ror-cpa}
+\end{theorem}
+
+This is one of many ways to define CPA encryption.
+%Recall IND-\$. 
+The IND-CPA (i.e., Left-or-Right indistinguishability) game implies we cannot learn even a single bit about the underlying plaintext. We also saw IND\$ which is widely used, generally because it is easier to work with and strictly stronger. IND-SIM is not as widely used as it was introduced mainly to demonstrate simulator-based definitions. We will see that IND-CPA is not nearly strong enough for practical use, however, but that it is useful conceptually and as a technical building block. However, none of these CPA settings are strong enough in the face of active attacks, in which ciphertexts are \emph{mauled}. As we will see soon, active attacks to ciphertexts raise {\bf confidentiality} and {\bf integrity} issues with our current CPA settings.
+
+Let's remind ourselves of the simplest CPA-secure scheme, CTR mode. 
+CTR mode chooses a random IV and uses its block cipher as a one-time pad. It pads enough such that you can XOR the needed amount of bits with the message. We can prove CTR is secure in the ROR game, as long as the IV is never chosen in a way that it collides with the input to $E_k$. To minimize the risk of collision as CTR mode is used for many messages with the same key (as the birthday bound will become close to one), the key should be refreshed at regular intervals.
+What is an active attack against CTR mode? Malleability attacks: we can change the ciphertext such that it decrypts correctly but to a different message that was not originally written. It is trivial to maul messages given a ciphertext even without the secret key $k$ because if you XOR in any fixed bitstring pattern to a ciphertext, decryption is performed the result will be the original message XOR'ed with that pattern. As an example, to flip the first bit of a message encrypted with CTR mode, flip the first bit of the ciphertext before it is submitted for decryption, and the result will see decryption performed correctly, but with the original message's first bit flipped in the result. There is nothing to protect CTR mode against message modification. We continue to lay the case for why active attacks on the encryption modes we have seen so far can be devastating in practice, through an example.
+
+\begin{example}[Session handling and login requests to web services.] One important application of encryption on the web is in encrypting cookie values. When a login is performed to a website, for instance, Facebook, there is first an HTTP GET request which then sets an anonymous cookie in the client's browser. This allows the server to link one request to a subsequent one. 
+When you click submit on a website's login button, this will initiate a POST request over HTTPS using the anonymous cookie (the channel to the server is encrypted over HTTPS, but the remote server still needs to see your password). If the authentication protocol of the server is done well, submitting login credentials to the server would results in the server returning a new cookie to identify you as authenticated. 
+As one concrete example, there were serious problems with Facebook's authentication protocol that were not fixed until 2011. 
+The length of a user's password could leak, despite HTTPS.
+Even worse, users' session ID cookies were being sent in plaintext. You could hijack other accounts by sniffing some local network, extract it and then use it in a connection request to Facebook without needing to login. There was even a tool called Firesheep used to do this (a Firefox browser extension).
+This example demonstrates that a bad way to do session IDs is to outsource (as the server) security-relevant state about the client in the cookie and store it on the client side. Storing the data on the client in plaintext would go against the security model of an untrusted client, so servers often encrypt the cookies. But bad libraries in the past have encrypted cookies with CTR mode. Sometimes permissions levels are included in that encrypted cookie, and use the cookie to check permissions levels on every subseuqent request to the server. So a malicious client could trivially XOR bits in the right spots (if you know the scheme) and could get arbitrary permissions. The fundamental misunderstanding here is that encryption modes like CTR don't provide message integrity.
+\end{example}
+
+CBC mode has trivial ``malleability'' (mauling) issues, too. Recall that in CBC mode, a random IV is chosen and is XORed with the first block of the message, then run through the cipher, and so on. %take the first ciphertext block to XOR with the next block message %is IND-\$ secure. 
+How could we change bits in the first block of the message sent to the server? %Refer to \ref{sec:symenc}.
+If we change any of the C0 bits, M1 will be modified even though it can still decrypt correctly. You could modify bits of C2, as well, but bits of the input M2 would be randomized.% --------------------
+
+The encryption modes we have discussed so far (CTR, CBC) do not provide \emph{integrity}. We need a notion of \textbf{authenticated encryption} in order to attain this property. 
+As mentioned before, there are also confidentiality risks with these modes. In CBC, it is possible to use malleability tricks and clever queries to recover all of the plaintext. \scribenote{Full attack as a homework problem?}
+CBC mode handles messages with length a multiple of $n$ bits. We use \emph{padding} to make it work for arbitrary length messages. Padding checks often give rise to {\bf padding oracle attacks}.
+A simple case of this problem: padding by one byte. When we decrypt, we decrypt with CBC mode and check if the padding byte is what it is supposed to be (zero) that the padding rules defined. If you give an adversary some ciphertext under encryption $E_k$, we show that you can recover one byte of plaintext data if given access to the decryption oracle. 
+The decryption oracle in this case is as follows:
+
+\vspace{0.2cm}\fpage{.30}{
+Dec(K, C'):\\
+M[1]' $\Vert$ M[2]' $\Vert$ P' = CBC-Dec(K,C')\\
+If P' $\neq$ 0x00 then \\
+\myInd   Return error\\
+Else\\
+\myInd    Return ok
+}\\
+
+If we give some adversary the ciphertexts C0,C1,C2 they can recover one byte of information about the plaintext by interacting with the decryption oracle. If the adversary submits C0,C1,C2 unmodified to the oracle, then it will return `ok'. But if we flip the last bit in the C1 block, then the decryption will return `error' because during decryption, when processing C2 and going backwards, the string when XORed with C1 gives a low byte of zero, but now that we've flipped C1 on the low bit, the P value is now 1 instead of 0. How do we learn a byte about the message? We could flip all of the bits until reaching the beginning of the padding.
+%If we flip a bit in the second to least significant byte , we'd get back `ok'. 
+The adversary could replace C2 with C1, and C1 with C0. C0 XORed with M1 is M1. 
+%
+We need to get the oracle to operate on confidential message bits. If we move the ciphertext blocks around, we can get the oracle to decrypt values that are dependent on the unknown message. In particular if we move C1 to C2's position, then the recipient thinks this is the padding byte, the low order byte, but it is actually message bits, which the oracle will tell us.
+So more concretely, the adversary could send R,C0,C1 instead of C0,C1,C2 to the decryption oracle. When we decrypt, we'd get an error unless M1 low byte is $0^n$. But if we are unlucky, we could search over all byte values to keep trying to get an `ok' when the low byte of M1 = $i$. C0 XOR'ed $i$ XOR'ed the message byte will equal zero, so we'd know that the message byte equals $i$. This gives us a way to break confidentiality using an active mauling attack. 
+
+CBC is actually much more vulnerable than in this example. But to understand why, we need to understand PKCS\#7 padding, which is often used in CBC mode in practice:
+PCKCS\#7-Pad($M$)=$M||P||\dots||P$. In such a padding setting, there are $P$ repetitions of bytes encoding number of bytes padded. For a block length of 16 bytes, we never need more than 16 bytes of padding (10 10 \dots 10).
+
+Possible paddings:\\
+\vspace{0.2cm}\fpage{.30}{
+01\\
+02 02\\
+03 03 03\\
+04 04 04 04\\
+\dots\\
+FF FF FF FF \dots FF (could go up to 256).
+}\\
+
+Why would we want more padding than necessary to get to a multiple of the block length (i.e., the block offset)? This allows us to try to obfuscate the lengths of messages. This only prevents leaking some lower order bits about messages. But in general on the Web, this type of padding does not work very well. But what happens if the message ends in a padding sequence? How do we recover the original message from the padded message? Look at the last byte recovered from CBC mode and remove that much (the remaining prefix is the actual message).
+
+CBC decryption with PKCS\#7 padding pseudocode (strict padding checks):\\
+\vspace{0.2cm}\fpage{.30}{
+Dec(K,C)\\
+M[1] $\Vert$ ... $\Vert$ M[m] = CBC-Dec(K,C)\\
+P = RemoveLastbyte(M[m])\\
+while i < int(P):\\
+\myInd    P' = RemoveLastByte(M[m])\\
+\myInd    If P' != P then Return error\\
+\myInd    i++\\
+Return ok
+}\\
+``ok'' or ``error'' in this setting can be stand-ins for some other behavior:
+\begin{enumerate}
+    \item Passing data to application layer (web server)
+    \item Returning other error code (if padding fails)
+\end{enumerate}
+
+Let's attack CBC mode with PKCS\#7 padding. Because of the way we have defined padding, we can recover entire messages using a variant of the type of padding oracle attack we saw previously. Now we can trick the algorithm into thinking aribtrary bytes in the message block are padding bytes.
+We have a padding decryption oracle as seen above in pseudocode. If we (the adversary) submit R,C0,C1, then as before we will get an ``error'' from the padding decryption oracle. But if we continue to XOR C0 from 1 to $i$, like before we will eventually get an `ok' from the oracle. Most likely, this corresponds to finding a relationship between $i$ and the actual message byte underneath C0 such that it looks like the padding byte P=01.
+The low byte M1 = i XOR 0. \scribenote{Homework problem: Why?} 
+Let X[1] = D(K, C1). Then C0[16] XOR X[1][16] = M[1][16], then C0[16] XOR $i$ XOR X[1][16] = 01, so M[1][16] XOR $i$ = 01.
+
+That was the most likely valid padding. But it could also be the case that M[1][16] XOR $i$ = 02 and it just so happened that the next byte over to the left also came out 02 during decryption. Submit another query to rule this out: flip the bits of the 15th byte in the decrypted value. XOR in $i$ to C0's low byte, then go over one and flip a byte. Would get an ``error'' if it had been 02, since that's not a valid padding.
+So we know M[1][16] and we can find the offset to XOR into the low byte of C0 to ensure that the first padding byte during decryption is 02, then we can do a search for the second byte of message underneath C1 because it will be looking for 02 and ``error'' until it finds an $i$ that decrypts correctly. 
+
+As we have seen, our ability to provide message confidentiality is compromised in the face of active attacks on CBC mode. Could we change the decryption implementation to not use strict padding checks? We need some padding checks to tell server what to return to application layer (otherwise the end of the variable-length message won't be known). For correctness the server must look at the first byte. Some implementations can make padding oracle attacks harder to do, but it often makes decryption less efficient. What servers typically do is to not return errors, or obfuscate when padding errors occured versus a correct decryption, but this is really hard to do because of timing side channels.
+
+Long litany of CCA attacks on CBC: Vaudenay (2001; 10's of chosen ciphertexts, recovers message bits from a cipertext. Called ``padding oracle attack''), Canvel et al. (2003; shows how to use Vaudenay's ideas against TLS), Degabriele,
+Paterson, (2006; breaks IPsec encryption-only mode), Albrecht et al. (2009; plaintext recovery against SSH), Duong, Rizzo (2011; breaking ASP.net encryption), Jager, Somorovsky (2011; XML encryption standard), Duong, Rizzo (2011; ``beast'' attacks against TLS), AlFardan, Paterson (2012; attack against DTLS), AlFardan, Paterson (2013; lucky 13 attack against DTLS and TLS), Albrecht, Paterson (2016; lucky microseconds against Amazon's s2n library).
+
+% -------------------
+\subsection{Authenticated encryption security.}
+
+Our encryption algorithms don't have confidentiality or integrity guarantees in the face of active attacks. In order to remedy this, we need new schemes.
+We will show a first variant of this as a way to build authenticated encryption security, which builds off of our ROR CPA notion.
+In that notion, we had ROR for an encryption oracle versus a random bits oracle.
+Now in this setting, we add a decryption oracle to which you can submit ciphertexts:\\
 
 \hfpagess{.15}{.15}{
 \underline{$\RORCCA1^\advA_{\SE}$}\\[1pt]
@@ -29,14 +170,15 @@ Ret $C$\medskip
 
 \underline{$\DecOracle(C)$}\\
 Ret $\bot$
-}
+}\\
 
 
-\bnm
-\AdvRORCCA{\SE}{\advA} = \left|\Prob{\RORCCA1_\SE^\advA\Rightarrow1}
-                                    -\Prob{\RORCCA0_\SE^\advA\Rightarrow1}\right|
-\enm
+In the real world, the decryption oracle just checks if a ciphertext was returned legitimately by the encryption oracle. But in our game, if it was then we ignore that case. Otherwise we decrypt and give the message. Why must there be a restriction in our first variant that the attacker can't send to the decryption oracle that you get from encryption? Then you'd have to add more logic about what ciphertexts are returned (via a table of decryptions). If not in table, return bottom. These definitions can be shown equivalent pretty straightforwardly. Intuitively, the adversary needn't submit a message they encrypt to the descryption oracle, since they already know the original message. In the ideal world, the decryption always outputs an error symbol. Intuitively, this means that there should be no way to produce a valid ciphertext such that it decrypts to anything other than $\bot$. And lastly, we define advantage in the usual way:\\
+$\AdvRORCCA{\SE}{\advA} = \left|\Prob{\RORCCA1_\SE^\advA\Rightarrow1} - \Prob{\RORCCA0_\SE^\advA\Rightarrow1}\right|$\\
 
+CBC mode will \emph{not} be secure under this notion. Why? As an aside, we can ``decompose'' ROR-CCA security into two separate notions: (1) ROR security, which we saw earlier, and (2) Cipertext integrity (CTXT), in which the adversary, given the encryption oracle, cannot construct \emph{any} new ciphertext that decrypts to some message. So ROR + CTXT <=> ROR-CCA.
+
+Our new notion of ciphertext integrity just focuses on the ability to build encryption that doesn't decrypt to $\bot$. We show the CTXT game as follows:\\
 
 \fpage{.15}{
 \underline{$\CTXT^\advA_{\SE}$}\\[1pt]
@@ -63,164 +205,11 @@ Ret $M$
 \AdvCTXT{\SE}{\advA} = \Prob{\CTXT_\SE^\advA\Rightarrow\true}\\
 \enm
 
+We have an encryption and decryption oracle. The goal of an adversary is to try to get $\DecOracle$ to return something other than $\bot$ to a cipertext that wasn't returned by the encryption oracle. So it turns out that ROR confidentiality and CTXT together imply ROR-CCA definition. We can show that for any adversary $\advA$ against the ROR-CCA security of any scheme, then we can build adversaries against ROR security, or another adversary against CTXT security such that the advantage of ROR-CCA is upper bounded by the sum of the advantages of the ROR-CPA and CTXT security, with some constants. Informally, a scheme that is ROR-CPA secure, and is CTXT secure, then it is ROR+CTXT secure. \scribenote{Homework problem: showing ROR implied by ROR-CCA, CTXT implied by ROR-CCA.} Note that in general, ROR is considered to mean ROR-CCA in practice, but we have used it to mean ROR-CPA in the lecture notes so far.
 
-\begin{theorem}
-Let $\SE$ be a symmetric encryption scheme. Let $\advA$ be any
-$\INDCPA_\SE$-adversary making at most $q$ queries. 
-We give an $\ROR_\SE$-adversary $\advB$ such that
-\bnm
-  \AdvINDCPA{\SE}{\advA} \le 2\cdotsm\AdvROR{\SE}{\advB}
-\enm
-Adversary $\advB$ makes at most $q$ 
-queries and runs in time that of $\advA$.
-\label{theorem:ror-cpa}
-\end{theorem}
-
-\tnote{We'll possibly introduce the following at some point, but didn't need it
-here yet.}
-We sometimes use $\bigO$ notation to hide small values that can be derived from
-proofs, but don't matter to the interpretation of the theorem. If we were to do
-an asymptotic treatment, this would correspond to hiding constants, hence the
-abuse of notation.  Thus in above theorem we would replace $q+3$ with
-$\bigO(q)$. 
-
-
-\fpage{.20}{
-\underline{$\advB^{\Enc}$}\\[1pt]
-$b \getsr \bits$\\
-$b' \getsr \advA^\EncSim$\\
-If $(b = b')$ then Ret 1\\
-Ret 0\medskip
-
-\underline{$\EncSim(M_0,M_1)$}\\
-Return $\Enc(M_b)$
-}
-
-\begin{align*}
-\AdvROR{\SE}{\advB} 
-    &= \left|\Prob{\ROR1_\SE^\advB\Rightarrow 1} -
-                                \Prob{\ROR0_\SE^\advB\Rightarrow 1}\right|\\
-    &= \left|\Prob{\INDCPA_\SE^\advA\Rightarrow\true} - \frac{1}{2}\right|\\
-    &= \left|\frac{1}{2} +
-    \frac{1}{2}\cdot\AdvINDCPA{\SE}{\advA} - \frac{1}{2}\right|\\
-    &= \frac{1}{2}\cdot\AdvINDCPA{\SE}{\advA}
-\end{align*}
-
-
-
-
-
-\subsection{Active attacks on unauthenticated encryption schemes.}
-We left off in the previous chapter understanding how to build chosen plaintext attack (CPA) secure schemes. In particular, we saw the real or random (ROR) CCA games in \thref{theorem:ror-cpa}; this is one of many ways to define CPA encryption.
-%Recall IND-\$. 
-The IND-CPA (i.e., Left-or-Right indistinguishability) game implies we cannot learn anything about the underlying plaintext.
-However, none of these CPA settings say much about what you can do in the face of active attacks, in which ciphertexts are \emph{mauled}. As we will see soon, active attacks to ciphertexts raise {\bf confidentiality} and {\bf integrity} issues with our current CPA settings.
-
-Let's remind ourselves of the simplest CPA-secure scheme, CTR mode.
-CTR mode uses its block cipher as a one-time pad. It pads enough such that you can XOR the needed amount of bits with the message. We can prove CTR is secure in the ROR game, as long as the input to $E_k$ never collides. To minimize the risk of collision as CTR mode is used for many messages with the same key, the key should be refreshed at regular intervals.
-What is an active attack against CTR mode? Deniability attacks: we can change the ciphertext such that it decrypts to a different message that was not originally written. Trivial example of how to accomplish this: flip bits from a message (2:07pm).
-
-
-CBC mode has ``malleability'' (mauling) issues, too. Recall that CBC mode is IND-\$ secure. How could we change the first bits of the message sent to the server? \scribenote{include CBC mode diagram for reference?} Change any of the C0 bits, and you'll modify M0!
-You could modify bits of C2, as well, but bits of M2 would be randomized.
-
-We continue to lay the case for why active attacks on the encryption modes we have seen so far can be devastating in practice through an example.
-
-\begin{example}[Session handling and login requests to web services.] Consider the setting in which a regular HTTPS GET sends an anonymous cookie. This allows the server to link one request to a subequent one. When you click submit on a website's login button, this will initiate a request over HTTPS using the anonymous cookie. If the authentication protocol of the server is done well, submitting login credentials to the server would results in the server returning a new cookie to identify you as authenticated.
-
-There were serious problems with Facebook's authentication protocol, that were not fixed until 2011. The length of a user's password could leak, despite HTTPS.
-Even worse, users' session ID cookies were being sent in plaintext. You could hijack other accounts by sniffing some local network. Extract it and then use it in a connection request to Facebook without needing to login. There was even a tool called Firesheep used to do this (a Firefox browser extension).
-This example demonstrates that a bad way to do session IDs is to outsource security-relevant state about the client in the cookie.
-Bad libraries in the past have encrypted cookies with CTR mode. Sometimes permissions levels are included in that encrypted cookie. Could XOR bits in the right spots (if you know the scheme) and could get yourself permissions you shouldn't have.
-\end{example}
-
-
-% --------------------
-The encryption modes we have discussed so far (CTR, CBC) do not provide \emph{integrity}. We need authenticated encryption in order to attain this property. 
-As mentioned before, there are also confidentiality risks with these modes. In CBC, it is possible to use malleability tricks and clever queries to recover all of the plaintext. \scribenote{Full attack as a homework problem?}
-CBC mode handles messages with length a multiple of $n$ bits. We use \emph{padding} to make it work for arbitrary length messages. Padding checks often give rise to {\bf padding oracle attacks}.
-A simple case of this problem: padding by one byte. When we decrypt, we decrypt with CBC mode and check if the padding byte is what it's supposed to be (zero) that the padding rules defined. If you give an adversary some ciphertext under encryption $E_k$, we show that you can recover one byte of plaintext data if given access to the decryption oracle. 
-
-The decryption oracle is as follows:
-
-\vspace{0.2cm}\fpage{.30}{
-Dec(K, C'):\\
-M[1]' $\Vert$ M[2]' $\Vert$ P' = CBC-Dec(K,C')\\
-If P' $\neq$ 0x00 then \\
-\myInd   Return error\\
-Else\\
-\myInd    Return ok
-}\\
-
-Would get back `ok' (2:22pm). If we flip last C1 bit then decryption will get error. How do we learn a byte about the message? We could flip all of the bits until reaching the beginning of the padding.
-If we flip a bit in C1 (second to least significant byte), we'd get back ok. Replace C2 with C1, and C1 with C0. C0 XORed M1 is M1 (2:26pm). We'd get an error unless M1 low byte is $0^n$. We could search over all byte values to keep trying to get an `ok'. When low byte of M1 = i. C0 XOR'ed i XOR'ed message byte equals 0. If we move the ciphertext blocks around this way, we could get oracle to operate on confidential message bits.\scribenote{May need to write this more cohesively.}
-
-CBC is actually much more vulnerable than in this example. PKCS\#7 padding is often used in practice. In such a padding setting, there are P repetitions of byte encoding number of bytes padded. 
-
-\vspace{0.2cm}\fpage{.30}{
-01\\
-02 02\\
-03 03 03\\
-04 04 04 04\\
-...\\
-FF FF FF FF ... FF (could go up to 256).
-}\\
-
-Why want more padding than necessary to get to block offset? This allows us to try to obfuscate the lengths of messages. This only prevents leaking some lower bits. But in general on the Web, this type of padding doesn't work very well.
-
-What happens if your message ends in a padding sequence? How do we recover the original message from the padded message? Look at the last byte recovered from CBC mode and remove that much (the remaining prefix is the actual message).
-
-CBC decryption with PKCS\#7 padding pseudocode:
-\vspace{0.2cm}\fpage{.30}{
-Dec(K,C)\\
-M[1] $\Vert$ ... $\Vert$ M[m] = CBC-Dec(K,C)\\
-P = RemoveLastbyte(M[m])\\
-while i < int(P):\\
-\myInd    P' = RemoveLastByte(M[m])\\
-\myInd    If P' != P then Return error\\
-\myInd    i++\\
-Return ok
-}\\
-``ok'' or ``error'' in this setting can be stand-ins for some other behavior:
-\begin{enumerate}
-    \item Passing data to application layer (web server)
-    \item Returning other error code (if padding fails)
-\end{enumerate}
-
-%If you saw first byte as (2:33pm).
-
-Let's attack the CBC with PKCS\#7 padding. We have a padding decryption oracle as seen above in pseudocode. Most likely, we found a relationship between i and the actual message byte in C0 such that it looks like the padding byte...
-Low byte M1 = i XOR 0, % see notes. (2:36pm).
-Flip bits of 15th byte in decrypted value. Would get error . Can rule out that case with one additional query (2:38pm).
-We know M[1][16] and can search for second byte of message in C[2](?).\scribenote{Finish this attack.}
-
-As we have seen, our ability to provide message confidentiality is compromised in the face of active attacks on CBC mode. Can we change decryption implementation? Need some padding checks to tell server what to return to application layer. (2:41pm). Some implementations can make padding oracle attacks harder to do. Don't return errors, obfuscate with other return info, but this is really hard because of timing side channels.
-2:44pm to 2:47pm various chosen ciphertext (CCA) attacks against CBC mode. Long litany of attacks (Vaudenay, Canvel et al., Degabriele,
-Paterson, Albrecht et al....).\scribenote{Cite all of these.}
-
-% -------------------
-\subsection{Authenticated encryption security.}
-
-Our encryption algorithms don't have confidentiality or intregity guarantees in the face of active attacks. In order to remedy this, we need new schemes.
-
-We will show a first variant of this as a way to build authenticated encryption security.
-Let's begin with an encryption oracle or random bits oracle (ROR).
-Now we add a decryption oracle to which you can submit ciphertexts.
-Recall ROR-CCA1 and ROR-CCA0 from \thref{theorem:ror-cpa}.
-2:50pm curly C is a set, regular C is a string. In ROR-CC0 (the ideal world), decryption always outputs an error symbol. There is no way to produce a ciphertext by mauling. CBC mode will not be secure under this motion. Why must there be a restriction in our first variant that the attacker can't send to dec that you get from enc? Then you'd have to add more logic about what ciphertexts are returned (table of decryptions). If not in table, return bottom. These definitions can be shown equivalent pretty straightforwardly.
-As an aside (to scribe notes) 2:52pm, there's an all-in-one definition. (Leave it to notes.) \scribenote{Address this.}
-
-Our new notion of cihertext integrity just focuses on the ability to build encryption that doesn't decrypt to bottom. Refer to the CTXT game in \thref{theorem:ror-cpa}.\scribenote{Fix this ref or put CTXT in new ref.} We have an encryption and decryption oracle. The goal of an adversary is to try to get \textsf{dec} to return something other than error. %Turns out that ROR-CCA
-It is easy to prove ROR+CTXT. Variant of ROR-CCA which in this game could return...\scribenote{Why?}
-
-Let's see about building ROR-CCA using OCB mode.
-Recall the tweakable block ciphers (OCB-CCA) scheme. Per-message randomness. (2:58pm). Not CTXT secure.
-Example of how we could craft a message trivially to decrypt into something valid? A CTXT attack would be: any ciphertext string of $0^{4n}$ and it would decrypt. No error in any case unless it's the wrong length.
-
-We need redundancy in encryption to reject good vs bad decryptions for a message. Idea (3:01pm). Encode $0^n / 2$. Make the messages smaller blocks and then pad out the blocks... Is this secure? If you query random ciphertexts, could forge decryption in $q^{3n} / 2$. Bounds might be okay...but bounds could prove to be an issue.
-Query until you get a valid padding. Better than birthday bound.
-Per-block of encryption, only processing half as many bits of plaintext.
+%We can define a variant of ROR-CCA which in this game could return
+Let's see about building ROR-CCA using the CPA core OCB mode.
+Recall the tweakable block ciphers (OCB-CCA) scheme. Running it to differentiate between different applications of the block cipher, with random nonces to create per-message randomness. The intuition being that if N never collides across different messages being used, then there are fresh tweaks being used, and no repetition within message blocks given the counter. But this is not CTXT secure. The decryption algorithm is as follows:
+Reject if $|C|\neq 4n$; Decrypt via inverse of tweakable blockcipher; Return resulting $M1||M2||M3$. It is easy to build a ciphertext that decrypts validly against this. A CTXT attack would be: any ciphertext string of size $4n$, like $0^{4n}$ and it would decrypt. No error in any case unless it's the wrong length. Intuitively, we need redundancy in encryption to ensure the decryption oracle can reject good versus bad ciphertexts. One approach could be: let's assume 1.5n bit messages, then encode $0^n / 2 || M1$, $0^n / 2 || M2, 0^n / 2 || M3$. Then encrypt. So this makes the messages smaller blocks and then pad out the blocks with zeroes for each independent block. Then during decryption we need to check the zeroes; if so, we allow decryption, and if not, output $\bot$. Is this secure? Yes, up until bounds. If you query a random C0,C1,C2,C3 to the decryption oracle without getting any encryptions, what is the probability that it would decrypt properly? It would be roughly $1/ 2^{3n/2}$, which is the probability of three random $n$ over 2 bitstrings equalling all zeroes. Using this, one could make an attack to forge a decryption in $q / 2^{3n/2}$. Then query until you get a valid padding. Better than the birthday bound, but not very efficient because per-block of encryption, this approach is only processing half as many bits of plaintext.
 %Other idea: add XORed random number in M1 (3:06pm). Might not work.
-Cute trick that people with came up with OCB realized (3:08pm). Add another block... \scribenote{Add this.}
-
-Tweak on a tag value needs to be different from other tweaks. This suffices to provide integrity. Just running the block cipher one more time. This can all be done in one pass. Rather than encrypting in one, and then authenticating.
+The idea that the people who came up with OCB realized was that the could add another block of the tweakable block cipher application, a simple redundancy check which XORs all the message blocks and get a value called the tag. Then decryption recomputes the tag and check that it's equal to the tag block's redundancy value. The tweak on a tag value needs to be different from other tweaks. If it does so, then this suffices to provide integrity. This approach is very efficient, as it only requires running the block cipher one more time. This can all be done in one pass. Rather than encrypting in one, and then authenticating. This is the core idea underlying OCB mode.
