--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -41,6 +41,26 @@
    year={2014}
 }
 
+@techreport{laurie2013certificate,
+  title={Certificate transparency},
+  author={Laurie, Ben and Langley, Adam and Kasper, Emilia},
+  year={2013}
+}
+
+@techreport{deacon2007lightweight,
+  title={The lightweight online certificate status protocol (OCSP) profile for high-volume environments},
+  author={Deacon, A and Hurst, R},
+  year={2007}
+}
+
+@misc{diginotar2011mitm,
+	title = {An update on attempted man-in-the-middle attacks},
+	url = {https://security.googleblog.com/2011/08/update-on-attempted-man-in-middle.html},
+	author = {Google Security Blog},
+	month = Aug,
+	year = {2011},
+}
+
 
 @misc{groth10shortpairing,
    author = {Jens Groth},
